Expose interface traffic via WebSocket every 2 seconds